--- a/_notebooks/ta_02_access-water_data.ipynb
+++ b/_notebooks/ta_02_access-water_data.ipynb
@@ -20,6 +20,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We will set out our business problem and subsequent ML question that we are trying to answer. Then we will access the water point data for Uganda and perform some basic cleaning steps to prepare it for further merging and analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Business Problem"
    ]
   },
