--- a/_notebooks/ta_03_access_demographic_data.ipynb
+++ b/_notebooks/ta_03_access_demographic_data.ipynb
@@ -19,6 +19,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0aa7e535",
+   "metadata": {},
+   "source": [
+    "We have manually downloaded regional demographic data for Uganda on our computer and will load it in this notebook to do some initial cleaning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fb96bc84",
    "metadata": {},
    "source": [
