--- a/_notebooks/ta_04_access_conflict_data.ipynb
+++ b/_notebooks/ta_04_access_conflict_data.ipynb
@@ -10,10 +10,19 @@
     "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
+    "- sticky_rank: 3\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
     "- image: images/acled_logo.png\n",
     "- categories: [fastpages, jupyter]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27aa1696",
+   "metadata": {},
+   "source": [
+    "We access conflict data from Uganda from the past 20 years. We clean and end up with a list of events, describing the actors involved, the type of conflict and its location."
    ]
   },
   {
