--- a/_notebooks/ta_05_master_dataframe.ipynb
+++ b/_notebooks/ta_05_master_dataframe.ipynb
@@ -10,10 +10,19 @@
     "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
+    "- sticky_rank: 4\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
     "- image: images/panda.jpeg\n",
     "- categories: [fastpages, jupyter]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0897efa",
+   "metadata": {},
+   "source": [
+    "We merge water point data with conflict and demographic data at the sub-county level. We end up with more than 100k water points and information on whether it is not functioning or not as well as all the regional information described above."
    ]
   },
   {
