--- a/_notebooks/ta_07_logistic_regression.ipynb
+++ b/_notebooks/ta_07_logistic_regression.ipynb
@@ -8,10 +8,18 @@
     "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
+    "- sticky_rank: 6\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
     "- image: images/logistic.png\n",
     "- categories: [fastpages, jupyter]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We run our first ML model, a logistic regression, first with default parameters, then we attempt to tune hyperparameters to improve it. We also visualise various accuracy scores, the confusion matrix and the ROC curve. We end by dumping our best model for further comparison."
    ]
   },
   {
