--- a/_notebooks/ta_10_random_forest.ipynb
+++ b/_notebooks/ta_10_random_forest.ipynb
@@ -9,9 +9,17 @@
     "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
+    "- sticky_rank: 9\n",
     "- author: Thomas Adler\n",
     "- image: images/forest.png\n",
     "- categories: [fastpages, jupyter]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We run our fourth ML model, a random forest, first with default parameters, then we attempt to tune hyperparameters to improve it. We also visualise various accuracy scores, the confusion matrix and the ROC curve. We end by dumping our best model for further comparison."
    ]
   },
   {
