--- a/_notebooks/ta_15_neural_networks.ipynb
+++ b/_notebooks/ta_15_neural_networks.ipynb
@@ -8,10 +8,18 @@
     "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
+    "- sticky_rank: 14\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
     "- image: images/neural.png\n",
     "- categories: [fastpages, jupyter]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We run our ninth and final ML model, a neural network. We test different architectures, layers, loss functions, metrics, optimisers, regularization, dropout rates, batch normalizations, activation functions and epochs. We also visualise various accuracy scores, the confusion matrix and the ROC curve. We end by dumping our best model for further comparison."
    ]
   },
   {
