--- a/_notebooks/ta_16_wpdx_model_extract.ipynb
+++ b/_notebooks/ta_16_wpdx_model_extract.ipynb
@@ -9,10 +9,18 @@
     "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
+    "- sticky_rank: 15\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
     "- image: images/wpdx_model.png\n",
     "- categories: [fastpages, jupyter]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We extract the predictions of the model of the WPDx. We visualise its performance and save it for comparison with our own model. "
    ]
   },
   {
