--- a/_notebooks/ta_17_model_comparison.ipynb
+++ b/_notebooks/ta_17_model_comparison.ipynb
@@ -9,10 +9,18 @@
     "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
+    "- sticky_rank: 16\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
     "- image: images/comparison.png\n",
     "- categories: [fastpages, jupyter]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We compare all of our nine models, plus the WPDx model to assess which one has the best recall score for non-functioning points. Apart from this main metric that we are interested in, we also look at the AUC, other accuracy scores, the prediciton and fit time as well as their tendency to overfit. Taking all of this into account, our best model is XGBoost and performs 50% better than the WPDx model."
    ]
   },
   {
