--- a/_notebooks/ta_99_ARCHIVED_eda.ipynb
+++ b/_notebooks/ta_99_ARCHIVED_eda.ipynb
@@ -9,11 +9,20 @@
     "> \"First exploration to refine business and ML question\"\n",
     "- toc: true\n",
     "- branch: master\n",
+    "- sticky_rank: 17\n",
     "- badges: true\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
     "- image: images/uganda_flag.png\n",
     "- categories: [fastpages, jupyter]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e535c28",
+   "metadata": {},
+   "source": [
+    "This was an initial EDA performed at the start of the project to explore the datasets and refine my business and ML question. I am looking at the change in water access and capacity over time in various regions as well as the relaitonship between conflict and water access and installation."
    ]
   },
   {
