--- a/_notebooks/ta_14_xgboost.ipynb
+++ b/_notebooks/ta_14_xgboost.ipynb
@@ -8,10 +8,18 @@
     "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
+    "- sticky_rank: 13\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
     "- image: images/xgboost.png\n",
     "- categories: [fastpages, jupyter]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We run our eigth ML model, an xgboost, first with default parameters, then we attempt to tune hyperparameters to improve it. We also visualise various accuracy scores, the confusion matrix and the ROC curve. We end by dumping our best model for further comparison."
    ]
   },
   {
